# ESP32-Roulette

./: .gitmodules  CMakeLists.txt  Makefile  README.md  sdkconfig.defaults  settings.def
PCB/: Makefile
PCB/Roulette/: Roulette.kicad_pcb  Roulette.kicad_prl  Roulette.kicad_pro  Roulette.kicad_sch
PCB/Roulette/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
components/ESP32-RevK/: CMakeLists.txt  Kconfig  buildsuffix  esp8266_compat.c  jo.c  lwmqtt.c  partitions_4m-8266.csv  partitions_8m.csv  revk.c  sdkconfig.defaults  setbuildsuffix
components/ESP32-RevK/include/: esp8266_flash_compat.h  esp8266_gpio_compat.h  esp8266_httpd_compat.h  esp8266_netif_compat.h  esp8266_ota_compat.h  esp8266_tls_compat.h  esp8266_wdt_compat.h  jo.h  lwmqtt.h  revk.h
main/: CMakeLists.txt  Roulette.c
